--- a/index.html
+++ b/index.html
@@ -4,51 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My website</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Asus Laptop Pricing</title>
   </head>
   <body>
-    <header>
-      <h1>Asus Laptop Pricing</h1>
-    </header>
-    <div class="laptop-container">
-      <div class="pricing-plan">
-        <div class="laptop-name">Asus S510UN</div>
-        <div class="laptop-image"><img src="./asus s510UN.jpg" alt="" /></div>
-        <div class="laptop-price">Rs.48,592.00</div>
-        <div class="laptop-features">
-          <li>✔️ i5 8th Gen</li>
-          <li>✔️ 8GB RAM</li>
-          <li>💻 1TB HDD 256GB SSD</li>
-        </div>
-        <button>BUY</button>
-      </div>
-      <div class="pricing-plan">
-        <div class="laptop-name">Asus Rog zephyrus</div>
-        <div class="laptop-image">
-          <img src="./asus rog zephyrus G14.jpg" alt="" />
-        </div>
-        <div class="laptop-price">Rs.85,490.00</div>
-        <div class="laptop-features">
-          <li>✔️ AMD RYZEN 7</li>
-          <li>✔️ 8GB RAM</li>
-          <li>💻 1TB SSD</li>
-        </div>
-        <button>BUY</button>
-      </div>
-      <div class="pricing-plan">
-        <div class="laptop-name">Asus Vivobook 14</div>
-        <div class="laptop-image">
-          <img src="./asus vivobook14.jpg" alt="" />
-        </div>
-        <div class="laptop-price">Rs.54,990.00</div>
-        <div class="laptop-features">
-          <li>✔️ i7 11th GEN</li>
-          <li>✔️ 16GB RAM</li>
-          <li>💻 512GB SSD</li>
-        </div>
-        <button>BUY</button>
-      </div>
-    </div>
+    <header><h1>My Website</h1></header>
+    <nav class="container">
+      <a href="https://uma-mahesh-mekala.github.io/My-Resume/" class="resume">Resume</a>
+      <a href="./about.html" class="about">About</a>
+      <a href="./contact.html" class="contact">Contact</a>
+      <a href="https://uma-mahesh-mekala.github.io/html-portfolio/" class="portfolio">Portfolio</a>
+    </nav>
+    <main>
+      <p>
+        Hey guys I hope you are having a good day. If you are visiting the
+        website first time please go and check out my <b>Resume</b> and some
+        projects i have done through <b>Portfolio</b> available in the
+        Navigation bar.
+      </p>
+    </main>
+    <footer>
+        Copyright &#169 Uma Mahesh. All rights reserved.
+    </footer>
   </body>
 </html>
